--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,4 +16,4 @@ jobs:
       run: sudo xcode-select --switch /Applications/Xcode_13.0.app/Contents/Developer
 
     - name: Build and test
-      run: xcodebuild clean build test -workspace Assignment.xcworkspace -scheme "Assignment" -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 12" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
+      run: xcodebuild clean build test -workspace Assignment.xcodeproj -scheme "Assignment" -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 12" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
